<resources>
    <string name="app_name" translatable="false">Wheather</string>
    <string name="label">Wheather</string>
    <string name="loading_data">Loading data</string>
    <string name="btn_search">Search</string>
    <string name="show_wind">show Wind</string>
    <string name="show_humidity">show Humidity</string>
    <string name="show_pressure">show Pressure</string>
    <string name="false_off">false</string>
    <string name="true_on">true</string>
</resources>
